# M.A.S.-Term

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION.md  LICENSE  README.md  SECURITY.md  install.sh  uninstall.sh  workflows.toml
.github/workflows/: ci.yml
crates/masterm-cli/: Cargo.toml
crates/masterm-cli/shell/: init.bash  init.fish  init.zsh
crates/masterm-cli/src/: main.rs
crates/masterm-cli/src/commands/: ask.rs  cache.rs  check.rs  completions.rs  config.rs  dashboard.rs  doctor.rs  init.rs  install.rs  mod.rs  mode.rs  plugins.rs  profile.rs  prompt.rs  run.rs  security.rs  setup.rs  sync.rs  update.rs  welcome.rs
crates/masterm-core/: Cargo.toml
crates/masterm-core/assets/: default_config.toml
crates/masterm-core/src/: error.rs  lib.rs
crates/masterm-core/src/cache/: db.rs  mod.rs
crates/masterm-core/src/cloud/: mod.rs
crates/masterm-core/src/config/: enterprise.rs  loader.rs  mod.rs  schema.rs
crates/masterm-core/src/context/: container.rs  detector.rs  environment.rs  git.rs  language.rs  mod.rs
crates/masterm-core/src/plugin/: api.rs  loader.rs  mod.rs  permissions.rs  wasm.rs
crates/masterm-core/src/prompt/: mod.rs  renderer.rs  segment.rs  theme.rs
crates/masterm-core/src/safety/: command_filter.rs  mod.rs  prod_guard.rs
crates/masterm-plugins/: Cargo.toml
crates/masterm-plugins/src/: docker.rs  env.rs  git.rs  go.rs  java.rs  kubernetes.rs  lib.rs  node.rs  prod_guard.rs  python.rs  rust.rs
crates/masterm-plugins/src/security/: audit_log.rs  file_integrity.rs  ip_reputation.rs  mod.rs  network_monitor.rs  package_audit.rs  priv_escalation.rs  sandbox_mode.rs  secret_detection.rs  ssh_gpg_monitor.rs  suspicious_pattern.rs
crates/masterm-security/: Cargo.toml
crates/masterm-security/src/: config.rs  lib.rs
crates/masterm-security/src/audit/: event.rs  logger.rs  mod.rs  storage.rs
crates/masterm-security/src/crypto/: mod.rs
crates/masterm-security/src/integrity/: mod.rs
crates/masterm-security/src/network/: mod.rs
crates/masterm-security/src/patterns/: mod.rs  privilege.rs  secrets.rs  threats.rs
crates/masterm-security/src/pkg/: mod.rs
crates/masterm-security/src/reputation/: cache.rs  mod.rs
crates/masterm-security/src/sandbox/: mod.rs
crates/masterm-shell/: Cargo.toml
crates/masterm-shell/src/: bash.rs  fish.rs  lib.rs  powershell.rs  zsh.rs
crates/masterm-tui/: Cargo.toml
crates/masterm-tui/src/: app.rs  events.rs  lib.rs  ui.rs  widgets.rs
scripts/: setup-bash.sh  setup-fish.fish  setup-powershell.ps1  setup-zsh.sh
