[workspace]
resolver = "2"
members = [
    "crates/masterm-core",
    "crates/masterm-cli",
    "crates/masterm-shell",
    "crates/masterm-plugins", "crates/masterm-tui",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["MASTerm Team"]
license = "MIT"
description = "A fast, intelligent, cross-shell terminal framework"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }
clap_complete = "4.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Terminal
comfy-table = "7.1"
ratatui = "0.26"
owo-colors = "4.0"
crossterm = "0.27"
console = "0.15"
inquire = "0.7"
sysinfo = "0.30"
indicatif = "0.17"

# File system
walkdir = "2.4"
dirs = "5.0"
which = "6.0"

# Database (for caching)
rusqlite = { version = "0.31", features = ["bundled"] }

# Utilities
once_cell = "1.19"
regex = "1.10"
chrono = "0.4"
semver = "1.0"
sha2 = "0.10"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
