[package]
name = "masterm-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core engine for MASTerm terminal framework"

[dependencies]
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
crossterm.workspace = true
walkdir.workspace = true
dirs.workspace = true
which.workspace = true
rusqlite.workspace = true
once_cell.workspace = true
regex.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile = "3.24.0"
