[package]
name = "masterm-plugins"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Built-in plugins for MASTerm terminal framework"

[dependencies]
masterm-core = { path = "../masterm-core" }
masterm-security = { path = "../masterm-security" }
async-trait.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
regex.workspace = true
chrono.workspace = true
tracing.workspace = true
dirs.workspace = true

