[package]
name = "masterm-security"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Security utilities and threat detection for MASTerm"

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
dirs = { workspace = true }

# Security-specific dependencies
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"
once_cell = { workspace = true }
url = { version = "2.5", features = ["serde"] }
notify = "6.1"
glob = "0.3"

[dev-dependencies]
tempfile = "3.10"
